Flapjack libc is now testable.
The symbols are renamed when building for unit tests so that the unit
test framework links against and uses the host libc. It's not a great idea
to have the testing framework rely on the fundamental library functions
which are under test.

--- a/src/isr_install.c.erb
+++ b/src/isr_install.c.erb
@@ -5,7 +5,7 @@
 // Though, all are simply assembly wrappers which call the high-level dispatcher.
 
 #include <idt.h>
-#include <strings.h>
+#include <string.h>
 
 // These wrappers are defined in isr_wrapper_asm.S
 <% [0..14, 16..19, 32..255].map { |r| Array(r) }.inject( :+ ).each do |isr| %>
@@ -13,7 +13,7 @@ void isr_wrapper_<%= isr %>();<% end %>
 
 void isr_install(idt_entry_t *idt)
 {
-	bzero(idt, sizeof(idt_entry_t) * IDT_MAX);
+	memset(idt, 0, sizeof(idt_entry_t) * IDT_MAX);
 	
 	<% [0..14, 16..19, 32..255].map { |r| Array(r) }.inject( :+ ).each do |isr| %>
 	idt_build_entry(&idt[<%= isr %>], (uint32_t)isr_wrapper_<%= isr %>, TRAP_GATE, 0);<% end %>
