Reformat source code to obey new style guidelines.
* Replaced #pragma once with include guards.
* Class names are in PascalCase.
* Renamed typedefs which were using "_t" suffix.
* Renamed class members which had a leading underscore.
* Eliminated forward declarations where possible.
* Replaced use of NULL with nullptr in C++ code.
* Replaced macro constants with constexpr.

--- a/Kernel/src/isr_install.c.erb
+++ b/Kernel/src/isr_install.c.erb
@@ -11,12 +11,12 @@
 <% [0..14, 16..19, 32..255].map { |r| Array(r) }.inject( :+ ).each do |isr| %>
 void isr_wrapper_<%= isr %>(void);<% end %>
 
-void isr_install(idt_entry_t *idt)
+void isr_install(IDTEntry *idt)
 {
-    memset(idt, 0, sizeof(idt_entry_t) * IDT_MAX);
+    memset(idt, 0, sizeof(IDTEntry) * IDT_MAX);
     
     <% [0..14, 16..19, 32..255].map { |r| Array(r) }.inject( :+ ).each do |isr| %>
     idt_build_entry(&idt[<%= isr %>], (uint32_t)isr_wrapper_<%= isr %>, TRAP_GATE, 0);<% end %>
 
-    lidt(idt, sizeof(idt_entry_t) * IDT_MAX - 1);
+    lidt(idt, sizeof(IDTEntry) * IDT_MAX - 1);
 }
