--- a/Kernel/src/isr_install.c.erb
+++ b/Kernel/src/isr_install.c.erb
@@ -15,8 +15,14 @@ void isr_install(IDTEntry *idt)
 {
     memset(idt, 0, sizeof(IDTEntry) * IDT_MAX);
     
+#ifdef __i386__
     <% [0..14, 16..19, 32..255].map { |r| Array(r) }.inject( :+ ).each do |isr| %>
     idt_build_entry(&idt[<%= isr %>], (uint32_t)isr_wrapper_<%= isr %>, TRAP_GATE, 0);<% end %>
+#else
+    // stub
+    <% [0..14, 16..19, 32..255].map { |r| Array(r) }.inject( :+ ).each do |isr| %>
+    idt_build_entry(&idt[<%= isr %>], 0, TRAP_GATE, 0);<% end %>
+#endif
 
     lidt(idt, sizeof(IDTEntry) * IDT_MAX - 1);
 }
