Extract code for configuring the hardware interrupt controller.
The new class i386::HardwareInterruptController provides a platform-
agnostic interface to the hardware interrupt controller. The goal is to be
able to swap this out on different platforms via the kernel policy.

--- a/KernelPlatformSupport/src/platform/i386/isr_install.c.erb
+++ b/KernelPlatformSupport/src/platform/i386/isr_install.c.erb
@@ -4,7 +4,7 @@
 // These are the procedures which are directly referenced by the IDT.
 // Though, all are simply assembly wrappers which call the high-level dispatcher.
 
-#include <idt.h>
+#include <platform/i386/idt.h>
 #include <string.h>
 
 // These wrappers are defined in isr_wrapper_asm.S
