Rewrite grub.cfg to include each multiboot module in User.

--- a/grub.cfg.erb
+++ b/grub.cfg.erb
@@ -3,7 +3,8 @@ set default=0
 
 menuentry "Flapjack OS" {
 	multiboot /boot/kernel.bin
-	module /modules/Test1
-	module /modules/Test2
+	<% modules.split.each do |fn| %>
+	module /modules/<%= File.basename fn %>
+	<% end %>
 	boot
 }
